Ajout de la scroll bar sur la partie content Navbar fixé à gauche (overflow hidden pour le body) Et mise de flex a 1 pour le content pour que la navbar sois bien tout à gauche

--- a/chaine-production/src/App.scss
+++ b/chaine-production/src/App.scss
@@ -1,10 +1,5 @@
 @use "./const" as const;
 
-/*FONT*/
-@mixin font($n: 10px) {
-  font-family: "Inter";
-}
-
 ul {
   list-style-type: none;
   padding: 0;
@@ -35,21 +30,24 @@ ul {
   }
 }
 
-#root {
-  min-height: 100vh;
-}
 .App {
-  min-height: 100vh;
   display: flex;
   flex-direction: row;
-}
-
-.content {
-  padding: 20px;
+  height: 100vh;
 }
 
 .navbar {
   padding: 35px 20px;
   border-right: 2px const.$seashell solid;
   min-width: 230px;
+}
+
+.content {
+  padding: 20px;
+  overflow-y: auto;
+  flex: 1;
+}
+
+#test {
+  height: 1000px;
 }
