--- a/chaine-production/src/index.scss
+++ b/chaine-production/src/index.scss
@@ -4,4 +4,5 @@ body {
   line-height: 1.5em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
